--- a/css/project.css
+++ b/css/project.css
@@ -1,28 +1,28 @@
 /* Navbar container */
-.navbar {
+/*.navbar {
   overflow: hidden;
   background-color: #333;
   font-family: Arial;
 }
 
 /* Links inside the navbar */
-.navbar a {
+/*.navbar a {
   float: left;
   font-size: 16px;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-}
+}*/
 
 /* The dropdown container */
-.dropdown {
+/*.dropdown {
   float: left;
   overflow: hidden;
-}
+}*/
 
 /* Dropdown button */
-.dropdown .dropbtn {
+/*.dropdown .dropbtn {
   font-size: 16px; 
   border: none;
   outline: none;
@@ -30,43 +30,43 @@
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
-}
+  /*margin: 0; /* Important for vertical align on mobile phones */
+/*}*/
 
 /* Add a red background color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
+/*.navbar a:hover, .dropdown:hover .dropbtn {
   background-color: red;
-}
+}*/
 
 /* Dropdown content (hidden by default) */
-.dropdown-content {
+/*.dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-}
+}*/
 
 /* Links inside the dropdown */
-.dropdown-content a {
+/*.dropdown-content a {
   float: none;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
-}
+}*/
 
 /* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
+/*.dropdown-content a:hover {
   background-color: #ddd;
-}
+}*/
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
+/*.dropdown:hover .dropdown-content {
   display: block;
-}
+}*/
 
 body{
   text-align: center;
@@ -75,3 +75,45 @@ body{
 datalist {
   display: none;
 }
+
+.card {
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    float: none;
+    border: 2px solid #3BA3BA;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+}
+
+.ulOfCard {
+    margin: 0 auto;
+    width: 100%;
+    list-style-type: none;
+    position: absolute;
+    left: 0;
+    padding: 0 1%;
+}
+
+.liOfCard {
+    width: 31.3333333333%;
+    margin: 0 1%;
+    float: left;
+    border: 2px solid #3BA3BA;
+    border-radius: 4px;
+    position: relative;
+    text-align: center;
+}
+
+.titleOfLi {
+    position: relative;
+    top: -25px;
+    color: #062c33;
+    line-height: 30px;
+    text-align: center;
+}
+
+
+
+
