get searched data from database when searched by name

--- a/css/project.css
+++ b/css/project.css
@@ -77,8 +77,8 @@ datalist {
 }
 
 .card {
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 250px;
     margin: 0 auto;
     float: none;
     border: 2px solid #3BA3BA;
@@ -112,6 +112,20 @@ datalist {
     color: #062c33;
     line-height: 30px;
     text-align: center;
+}
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 
