--- a/css/project.css
+++ b/css/project.css
@@ -115,6 +115,7 @@ datalist {
 }
 
 .loader {
+    margin: 0 auto;
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #3498db; /* Blue */
     border-radius: 50%;
