--- a/css/project.css
+++ b/css/project.css
@@ -77,7 +77,9 @@ datalist {
 }
 
 .card {
-    width: 480px;
+    /*width: 480px;
+    height: 300px;*/
+    display: flex;
     height: 300px;
     margin: 10px 10px;
     float: none;
