--- a/css/project.css
+++ b/css/project.css
@@ -76,6 +76,14 @@ datalist {
   display: none;
 }
 
+input[list] {
+    border-radius: 5px;
+    background: #ffffff;
+    width: 200px;
+    border-style: ridge;
+}
+
+
 .leftSideResults {
     height: 500px;
     overflow-y: scroll;
@@ -98,6 +106,8 @@ datalist {
     color: #ffffff;
     border-color: #e5e5e5;
 }
+
+
 .card {
     display: flex;
     /*width: 480px;
