--- a/css/project.css
+++ b/css/project.css
@@ -216,6 +216,7 @@ input[list] {
     padding:10px;
 }
 
+
 .service{
     background-color: #ffffff96;
     border: black;
@@ -230,6 +231,12 @@ input[list] {
 hr.separatorLine {
     border-top: 3px double #000000;
 }
+
+.contactFields{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 
 
 
