update articles for search result

--- a/css/project.css
+++ b/css/project.css
@@ -131,8 +131,8 @@ text-align: center;
 }
 
 .carousel-inner{
-    background: #ffff;
-    height: 400px;
+    background: #8dc3cf73;
+    height: 300px;
     border-radius: 10px;
 }
 
